--- a/index.html
+++ b/index.html
@@ -6,13 +6,247 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style.css">
     <!-- bootstrap-stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- font--awesome -->
+    <script src="https://kit.fontawesome.com/51cee99d9d.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
+    <!-- header-strat -->
+    <header>
+        <!-- NavBar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="" class="d-inline-block align-text-top">
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <form style="width: 500px;" class="d-flex justify-content-end align-items-center">
+                        <input position: relative; class="form-control me-2 rounded-pill " type="search " placeholder="Search " aria-label="Search ">
+                        <button style="position: absolute; color: rgb(197, 197, 197); " class="btn d-flex me-2 " type="submit "><i class="fas fa-search "></i></button>
+                    </form>
+
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item ">
+                            <a class="nav-link" aria-current="page " href="#Home">Home</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link " href="#Shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link " href="#Backpack">Backpack</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link " href="#Subscribe">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Salider -->
+        <div id="Home" class="container">
+            <div id="carouselExampleIndicators" class="carousel slide rounded bg-color" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner my-5 ">
+                    <div class="carousel-item active">
+                        <div class="row d-flex align-items-center p-5">
+                            <div class="col-12 col-lg-7 col-md-7">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$1289</h1>
+                                <div class="panda-btn-bg1">BUY NOW ></div>
+                            </div>
+                            <div class="col-12 col-lg-5 col-md-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center  p-5 rounded">
+                            <div class="col-12 col-lg-7 col-md-7 ">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$1289</h1>
+                                <div class="panda-btn-bg1">BUY NOW ></div>
+                            </div>
+                            <div class="col-12 col-lg-5 col-md-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center p-5">
+                            <div class="col-12 col-lg-7 col-md-7 ">
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h1>$1289</h1>
+                                <div class="panda-btn-bg1">BUY NOW ></div>
+                            </div>
+                            <div class="col-12 col-lg-5 col-md-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </header>
+    <main>
+        <!-- Catagories -->
+        <section class="container my-5">
+            <div class="row g-3">
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="p-4 border bg-danger text-white d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Watch</h1>
+                        <img width="68" src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="p-4 border bg-warning text-white d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Bag</h1>
+                        <img width="68" src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="p-4 border bg-primary text-white d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Shoes</h1>
+                        <img width="68" src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+
+
+            </div>
+
+        </section>
+        <!-- Card-shoes -->
+        <section id="Shoes" class="container py-5">
+            <h3 class="mb-3">Shoes</h3>
+            <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="card h-100 border-0 shadow pb-3">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-secondary">$102</h4>
+                            <button class="panda-btn-bg">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="card h-100 border-0 shadow pb-3">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-secondary">$322</h4>
+                            <button class="panda-btn-bg">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="card h-100 border-0 shadow pb-3">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                        </div>
+                        <div class="ms-3">
+                            <h4 class="text-secondary">$322</h4>
+                            <button class="panda-btn-bg">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- Backpack -->
+        <section id="Backpack" class="container py-5">
+            <h3 class="mb-3">Backpack</h3>
+            <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="card h-100 border-0 shadow p-3">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h5 class="text-secondary">$122</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="ms-3">
+                            <button class="panda-btn-bg">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="card h-100 border-0 shadow pb-3">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <h5 class="text-secondary">$182</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <div class="ms-3">
+                            <button class="panda-btn-bg">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="card h-100 border-0 shadow pb-3">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h5 class="text-secondary">$232</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        </div>
+                        <div class="ms-3">
+
+                            <button class="panda-btn-bg">Buy Now >></button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- Subscribe -->
+        <section id="Subscribe" style="height: 300px;" class="container d-flex justify-content-center align-items-center mb-5 rounded-3 bg-color">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input class="form-control border-0 p-1 rounded-3" type="email" placeholder="Email.......">
+                <br>
+                <button class="panda-btn-bg">SUBMIT</button>
+            </div>
+        </section>
+    </main>
+    <footer class="text-center p-3 bg-danger tex-white">
+        <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+    </footer>
     <!-- bootstrap script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
 </body>
 
 </html>
